--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "rn-binance",
-  "version": "0.13.3",
+  "version": "0.13.4",
   "description": "Fork of binance-api-node adapted for React Native: crypto replaced with crypto-js, https-proxy-agent temporarily removed",
   "main": "dist",
   "files": [
     "dist",
-    "index.d.ts"
+    "index.d.ts",
+    "types"
   ],
   "scripts": {
     "build": "rm -rf dist && babel src -d dist",
